[gd_scene load_steps=14 format=3 uid="uid://da8mu3oqto3qq"]

[ext_resource type="Script" uid="uid://dhv3phik4tia" path="res://scenes/game/game.gd" id="1_tneyb"]
[ext_resource type="Script" uid="uid://djsxumpddydxq" path="res://scripts/autoload/conductor.gd" id="2_5i0tg"]
[ext_resource type="Script" uid="uid://b1ln7ad72xey4" path="res://scenes/game/game_camera_2d.gd" id="2_bdhmt"]
[ext_resource type="Script" uid="uid://bbfskuw2fyle3" path="res://scenes/game/tracks.gd" id="2_j74rm"]
[ext_resource type="Script" uid="uid://cm308tpfbi72q" path="res://scenes/game/scripts.gd" id="2_oquto"]
[ext_resource type="Script" uid="uid://dp70bbdhoqpo0" path="res://scripts/game/rating.gd" id="5_lfrn8"]
[ext_resource type="Script" uid="uid://1dwo0trw3je2" path="res://scripts/game/rating_calculator.gd" id="6_ur1sh"]

[sub_resource type="Resource" id="Resource_5i0tg"]
script = ExtResource("5_lfrn8")
name = &"shit"
timing = 166.66
score = -10
health = -2.0
metadata/_custom_type_script = "uid://dp70bbdhoqpo0"

[sub_resource type="Resource" id="Resource_bdhmt"]
script = ExtResource("5_lfrn8")
name = &"bad"
timing = 135.0
score = 10
health = 0.0
metadata/_custom_type_script = "uid://dp70bbdhoqpo0"

[sub_resource type="Resource" id="Resource_87uf6"]
script = ExtResource("5_lfrn8")
name = &"good"
timing = 90.0
score = 200
health = 0.75
metadata/_custom_type_script = "uid://dp70bbdhoqpo0"

[sub_resource type="Resource" id="Resource_2a8rs"]
script = ExtResource("5_lfrn8")
name = &"sick"
timing = 45.0
health = 1.0
metadata/_custom_type_script = "uid://dp70bbdhoqpo0"

[sub_resource type="Resource" id="Resource_4j704"]
script = ExtResource("5_lfrn8")
metadata/_custom_type_script = "uid://dp70bbdhoqpo0"

[sub_resource type="Curve" id="Curve_5selw"]
bake_resolution = 180
_data = [Vector2(0.25, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0.5), -5.0, -1.6, 0, 1, Vector2(0.75, 0.1), -1.0, -0.4, 0, 1, Vector2(1, 0), -1.0, -0.4, 0, 1]
point_count = 4

[node name="game" type="Node"]
script = ExtResource("1_tneyb")

[node name="tracks" type="Node" parent="."]
unique_name_in_owner = true
editor_description = "Node to contain all audio tracks for the given song that is playing."
script = ExtResource("2_j74rm")
stop_on_finish = true

[node name="conductor" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_5i0tg")
metadata/_custom_type_script = "uid://djsxumpddydxq"

[node name="rating_calculator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_ur1sh")
ratings = Array[ExtResource("5_lfrn8")]([SubResource("Resource_5i0tg"), SubResource("Resource_bdhmt"), SubResource("Resource_87uf6"), SubResource("Resource_2a8rs"), SubResource("Resource_4j704")])
accuracy_curve = SubResource("Curve_5selw")

[node name="scripts" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_oquto")

[node name="stage" type="Node2D" parent="."]

[node name="characters" type="Node2D" parent="."]

[node name="camera_2d" type="Camera2D" parent="."]
position = Vector2(640, 360)
limit_enabled = false
script = ExtResource("2_bdhmt")
bumps = false

[node name="hud_layer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[connection signal="event_hit" from="." to="camera_2d" method="_on_game_event_hit"]
[connection signal="ready_post" from="." to="camera_2d" method="_on_game_ready_post"]
[connection signal="song_exited" from="." to="camera_2d" method="_on_game_song_exited"]
[connection signal="beat_hit" from="conductor" to="camera_2d" method="_on_beat_hit"]
